--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production --open",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
-    "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
+    "dev": "webpack-dev-server --mode development --watch --open",
+    "deploy": "cross-env NODE_ENV=production gh-pages -d dist",
+    "eslint": "eslint --ext .js ./",
+    "eslint:fix": "eslint --ext .js ./ --fix"
   },
   "repository": {
     "type": "git",
@@ -34,7 +36,7 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
     "gh-pages": "3.0.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -42,15 +44,15 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.4.1",
     "eslint": "^7.2.0",
-    "eslint-plugin-import": "^2.22.0",
     "eslint-config-airbnb": "^18.2.0",
-    "autoprefixer": "^9.8.6"
+    "eslint-plugin-import": "^2.22.0"
   }
 }
